# pypyr

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  README.md  README.rst  conftest.py  invoke.yaml  pyproject.toml  pypyr-config.yaml  requirements.txt  setup.cfg  setup.py  shippable.yaml  tasks.py  tox.ini
.github/workflows/: lint-test-build.yaml  publish.yaml  tag-release.yaml
docs/adr/: 0001-namespace-on-eval-and-exec.md  0002-relative-pipelines-api-changes.md  0003-toml-in-core.md  0004-config-files.md  0005-build-front-end.md  0006-pipeline-as-code-api.md
ops/: README.rst  __init__.py  build.yaml  bump.py  bump.sh  bump.yaml  config.py  deploy.sh  lint.py  package.py  pipeline_buildout.py  pipeline_bump.py  publish.py  shippable-pypi-release.sh  shippable-tag-release.sh  tag.py  tag.sh  tag.yaml  test.py
pipelines/: donothing.yaml  echo.yaml  pypyrversion.yaml
pypyr/: __init__.py  __main__.py  cli.py  config.py  context.py  dsl.py  errors.py  formatting.py  models.py  moduleloader.py  pipedef.py  pipeline.py  pipelinerunner.py  platform.py  retries.py  stepsrunner.py  subproc.py  toml.py  venv.py  version.py  yaml.py
pypyr/aio/: subproc.py
pypyr/cache/: admin.py  backoffcache.py  cache.py  filecache.py  loadercache.py  namespacecache.py  parsercache.py  pipelinecache.py  stepcache.py
pypyr/context/: commas.py  json.py  jsonfile.py  keyvaluepairs.py  yamlfile.py
pypyr/format/: string.py
pypyr/loaders/: file.py  model.py  string.py
pypyr/log/: logger.py
pypyr/parser/: argskwargs.py  commas.py  dict.py  json.py  jsonfile.py  keys.py  keyvaluepairs.py  list.py  string.py  tomlfile.py  yamlfile.py
pypyr/pipelines/: config-show.yaml  donothing.yaml  echo.yaml  magritte.yaml  pypyrversion.yaml  venv-create.yaml
pypyr/pypeloaders/: fileloader.py
pypyr/steps/: add.py  append.py  assert.py  call.py  cmd.py  cmds.py  configvars.py  contextclear.py  contextclearall.py  contextcopy.py  contextmerge.py  contextset.py  contextsetf.py  debug.py  default.py  echo.py  env.py  envget.py  envset.py  envunset.py  fetchfile.py  fetchjson.py  fetchtoml.py  fetchyaml.py  fileformat.py  fileformatjson.py  fileformattoml.py  fileformatyaml.py  fileread.py  filereplace.py  filewrite.py  filewritejson.py  filewritetoml.py  filewriteyaml.py  glob.py  (+20 more)
pypyrcli/: __init__.py  __main__.py  cli.py  pipelinerunner.py
tests/: __init__.py  testpipelinewd.yaml
(+260 files in other folders)
