[bumpversion]
current_version = 4.5.1

[bumpversion:file:pypyr/version.py]

[bdist_wheel]
universal = 0

[coverage:report]
exclude_lines = 
	pragma: no cover
	if 0:
	if __name__ == .__main__.:
fail_under = 100

[coverage:run]
branch = True

[flake8]
ignore = W503
exclude = .git,__pycache__,.tox,*.egg,build,data,dist,.cache,.env

[metadata]
license_files = LICENSE
